[gd_scene load_steps=3 format=3 uid="uid://ds3sacjbuqac"]

[ext_resource type="PackedScene" uid="uid://c5ey1jk06asiq" path="res://sources/menus/components/password_visualizer.tscn" id="1_7chbh"]
[ext_resource type="Script" path="res://sources/menus/settings/student_panel.gd" id="1_teefe"]

[node name="StudentPanel" type="Control"]
custom_minimum_size = Vector2(822, 500)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 500.0
size_flags_horizontal = 3
script = ExtResource("1_teefe")

[node name="StudentContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -411.0
offset_top = -180.0
offset_right = 411.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelKalulu"

[node name="MarginContainer" type="MarginContainer" parent="StudentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="StudentContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="StudentContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordVisualizer" parent="StudentContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_7chbh")]
unique_name_in_owner = true
layout_mode = 2

[node name="DetailsButton" type="TextureButton" parent="StudentContainer"]
layout_mode = 2

[connection signal="pressed" from="StudentContainer/DetailsButton" to="." method="_on_details_button_pressed"]
